--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.penguindex"
-        minSdk 21
+        applicationId "com.example.penguindexapp"
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
